# streaming-chat-app

./: README.md  run_both.sh
backend/: Cargo.toml
backend/src/: main.rs
frontend/: package-lock.json  package.json
frontend/src/routes/: +page.svelte  Login.svelte
