[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.18", features = ["ws"]}
tokio = {version = "1.28.2", features = ["full"]}
serde = {version = "1.0.164", features = ["derive"]}
serde_json = "1.0.97"
futures-util = "0.3.28"
